adding a patched pypresence folder

--- a/config.example.json
+++ b/config.example.json
@@ -3,5 +3,6 @@
     "host" : "127.0.0.1:8181",
     "username" : "",
     "client_id" : "changeme",
-    "libraries": []
+    "libraries": [],
+    "excluded_devices": []
 }
