some refacto and reorg

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: plex-discord-rpc
     network_mode: host
     restart: unless-stopped
+    environment:
+      - TZ=Europe/Paris
     volumes:
       - /run/user/1000/discord-ipc-0:/tmp/discord-ipc-0:ro
       - ./plex_rpc.log:/app/plex_rpc.log
